<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeEventsFragment"
        android:title="@string/home"
        android:icon="@drawable/home" />
    <item
        android:id="@+id/upcomingEventsFragment"
        android:title="@string/upcoming"
        android:icon="@drawable/baseline_access_alarm_24" />
    <item
        android:id="@+id/pastEventsFragment"
        android:title="@string/past"
        android:icon="@drawable/baseline_assignment_turned_in_24" />
    <item
        android:id="@+id/favoriteEventsFragment"
        android:title="@string/favorite"
        android:icon="@drawable/baseline_favorite_24" />
    <item
        android:id="@+id/settingsFragment"
        android:title="@string/settings"
        android:icon="@drawable/baseline_settings_suggest_24" />

</menu>