<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="56dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Nama Event -->
        <TextView
            android:id="@+id/tv_event_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/event_name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnSurface"
            android:gravity="center"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivFavoriteIcon"
            app:layout_constraintHorizontal_bias="0.8"/>

        <!-- Icon Favorit -->
        <ImageView
            android:id="@+id/ivFavoriteIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/add_favorite"
            android:src="@drawable/favourite_border"
            app:layout_constraintTop_toTopOf="@id/tv_event_name"
            app:layout_constraintBottom_toBottomOf="@id/tv_event_name"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Gambar Event -->
        <ImageView
            android:id="@+id/iv_event_image"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toBottomOf="@id/tv_event_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            tools:src="@drawable/search_border" />

        <!-- CardView untuk informasi tambahan -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_event_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="4dp"
            app:layout_constraintTop_toBottomOf="@id/iv_event_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Nama Penyelenggara -->
                <TextView
                    android:id="@+id/tv_event_owner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_owner"
                    android:textSize="14sp"
                    android:textColor="?attr/colorOnSurface" />

                <!-- Waktu dan Lokasi Event -->
                <TextView
                    android:id="@+id/tv_event_time_and_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_time_and_location"
                    android:textSize="14sp"
                    android:textColor="?attr/colorOnSurface"
                    android:layout_marginTop="8dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_event_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/event_description"
            android:textSize="16sp"
            android:textColor="?attr/colorOnSurface"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/card_event_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_event_quota"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/event_quota"
            android:textSize="14sp"
            android:textColor="?attr/colorOnSurface"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_event_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/register"
            android:src="@drawable/baseline_assignment_add_24"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="32dp"
            android:elevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
