<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <!-- Event Image -->
    <ImageView
        android:id="@+id/ivEventLogo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Event Title -->
    <TextView
        android:id="@+id/tvEventTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/event_name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivEventLogo"
        app:layout_constraintEnd_toStartOf="@id/ivFavorite" />

    <!-- Event Date -->
    <TextView
        android:id="@+id/tvEventDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/event_date"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tvEventTitle"
        app:layout_constraintStart_toEndOf="@id/ivEventLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ivFavorite" />

    <!-- Favorite Icon -->
    <ImageView
        android:id="@+id/ivFavorite"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/baseline_favorite_24"
        android:contentDescription="@string/favorite_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
